--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,5 @@
   "outputDirectory": ".next",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "images": {
-    "domains": []
-  }
+  "framework": "nextjs"
 }
